Add contract test for kafka messaging.